--- a/charity-org/src/main/resources/application.properties
+++ b/charity-org/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=true
+spring.h2.console.enabled=true
+
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
