--- a/charity-org/src/main/resources/application.properties
+++ b/charity-org/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.h2.console.enabled=true
 spring.main.allow-bean-definition-overriding=true
+mailgun.username=postmaster@sandboxdc85e9f2d9d540ad9fd8f2e9201d1274.mailgun.org
+mailgun.password=5bfcc4f3c8f43dc0679be2145ba98d59-2e68d0fb-da4064d3
